--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@fortawesome/fontawesome-free": "^6.1.1",
         "@popperjs/core": "^2.11.5",
         "bootstrap": "^5.2.0-beta1",
-        "jquery": "^3.6.0"
+        "jquery": "^3.6.0",
+        "vue-template-compiler": "^2.6.14"
     }
 }
