--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "milon/barcode": "^9.0",
         "silviolleite/laravelpwa": "^2.0"
     },
     "require-dev": {
