--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     },
     "devDependencies": {
         "axios": "^0.21",
+        "laravel-echo": "^1.11.7",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "pusher-js": "^7.1.1-beta",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.52.1",
         "sass-loader": "^12.6.0",
@@ -27,6 +29,7 @@
         "bootstrap": "^5.2.0-beta1",
         "html-to-image": "^1.9.0",
         "jquery": "^3.6.0",
+        "moment": "^2.29.3",
         "vue-template-compiler": "^2.6.14"
     }
 }
