--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "bootstrap": "^5.2.0-beta1",
         "html-to-image": "^1.9.0",
         "jquery": "^3.6.0",
+        "vue-mobile-detection": "^2.0.1",
         "vue-template-compiler": "^2.6.14"
     }
 }
