--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
         "vue-loader": "^16.8.3"
     },
     "dependencies": {
-        "@fortawesome/fontawesome": "^1.1.8",
         "@fortawesome/fontawesome-free": "^6.1.1",
         "@popperjs/core": "^2.11.5",
-        "bootstrap": "^5.2.0-beta1",
+        "bootstrap": "^5.2.3",
         "html-to-image": "^1.9.0",
         "jquery": "^3.6.0",
-        "vue-mobile-detection": "^2.0.1",
         "moment": "^2.29.3",
+        "toastr": "^2.1.4",
+        "vue-mobile-detection": "^2.0.1",
         "vue-template-compiler": "^2.6.14"
     }
 }
