--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "milon/barcode": "^9.0",
         "pusher/pusher-php-server": "^7.0",
         "silviolleite/laravelpwa": "^2.0"
