--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "html-to-image": "^1.9.0",
         "jquery": "^3.6.0",
         "moment": "^2.29.3",
+        "select2": "^4.1.0-rc.0",
+        "select2-bootstrap-5-theme": "^1.3.0",
         "toastr": "^2.1.4",
         "vue-mobile-detection": "^2.0.1",
         "vue-template-compiler": "^2.6.14"
