--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
         "@fortawesome/fontawesome-free": "^6.1.1",
         "@popperjs/core": "^2.11.5",
         "bootstrap": "^5.2.3",
+        "chart.js": "^4.2.1",
         "html-to-image": "^1.9.0",
         "jquery": "^3.6.0",
         "moment": "^2.29.3",
         "select2": "^4.1.0-rc.0",
         "select2-bootstrap-5-theme": "^1.3.0",
         "toastr": "^2.1.4",
+        "vue-chartjs": "^5.2.0",
         "vue-mobile-detection": "^2.0.1",
+        "vue-month-picker": "^1.7.2",
         "vue-template-compiler": "^2.6.14"
     }
 }
